translation-tool/inputs/source_meta/objects/HnsSiteErrorTranss__x.object
<CustomObject>
    <description>HnsSiteErrorTranss</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HnsSiteErrorTranss</externalName>
    <fields>
        <fullName>CENTRAL_DB_ID__c</fullName>
        <description>CENTRAL_DB_ID</description>
        <externalDeveloperName>CENTRAL_DB_ID</externalDeveloperName>
        <label>Central DB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERROR_MESSAGE__c</fullName>
        <description>ERROR_MESSAGE</description>
        <externalDeveloperName>ERROR_MESSAGE</externalDeveloperName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SETID__c</fullName>
        <description>SETID</description>
        <externalDeveloperName>SETID</externalDeveloperName>
        <label>Set ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_ID__c</fullName>
        <description>SITE_ID</description>
        <externalDeveloperName>SITE_ID</externalDeveloperName>
        <label>Site ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_DIRECTION__c</fullName>
        <description>Z_DIRECTION</description>
        <externalDeveloperName>Z_DIRECTION</externalDeveloperName>
        <label>Direction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_SRCREASON__c</fullName>
        <description>Z_SRCREASON</description>
        <externalDeveloperName>Z_SRCREASON</externalDeveloperName>
        <label>Source Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_SRCTRANID__c</fullName>
        <description>Z_SRCTRANID</description>
        <externalDeveloperName>Z_SRCTRANID</externalDeveloperName>
        <label>Source Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TRANDATE__c</fullName>
        <description>Z_TRANDATE</description>
        <externalDeveloperName>Z_TRANDATE</externalDeveloperName>
        <label>Transaction Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TRANID__c</fullName>
        <description>Z_TRANID</description>
        <externalDeveloperName>Z_TRANID</externalDeveloperName>
        <label>Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TRANPROCESS__c</fullName>
        <description>Z_TRANPROCESS</description>
        <externalDeveloperName>Z_TRANPROCESS</externalDeveloperName>
        <label>Transaction Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TRANSOURCE__c</fullName>
        <description>Z_TRANSOURCE</description>
        <externalDeveloperName>Z_TRANSOURCE</externalDeveloperName>
        <label>Transaction Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Z_TRANTYPE__c</fullName>
        <description>Z_TRANTYPE</description>
        <externalDeveloperName>Z_TRANTYPE</externalDeveloperName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HnsSiteErrorTranss</label>
    <pluralLabel>HnsSiteErrorTranss</pluralLabel>
</CustomObject>